# wfcat

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: train_all_models.sh  train_closed.sh  train_open.sh  train_slow_fast.sh  train_slurm.sh
src/: data.py  features.py  logger.py  metrics.py  model_registry.py  train.py  trainer.py  utils.py
src/models/: __init__.py  ares.py  base_net.py  blocks.py  df.py  inception.py  rf.py  tmwf.py  varcnn.py  wfcat.py
