[project]
name = "wfcat"
version = "0.1.0"
description = "Reference implementation for WFCAT website fingerprinting attacks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "torch>=2.0",
  "pytorch-ignite>=0.5.0",
  "einops>=0.8.0",
  "timm>=1.0.0",
]

[project.scripts]
wfcat-train = "train:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
  "data",
  "features",
  "logger",
  "metrics",
  "model_registry",
  "train",
  "trainer",
  "utils",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["models*"]
